--- a/index.css
+++ b/index.css
@@ -2,12 +2,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    text-align: center; /* Centraliza o conteúdo */
+    text-align: center; 
 }
 
 main {
-    max-width: 960px; /* Define um tamanho máximo */
-    margin: 0 auto; /* Centraliza a seção */
+    max-width: 960px; 
+    margin: 0 auto; 
     padding: 20px;
 }
 
@@ -15,23 +15,23 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px; /* Espaçamento entre os projetos */
+    gap: 20px; 
 }
 
 .projeto {
-    width: 45%; /* Largura de cada projeto */
+    width: 45%; 
     border: 1px solid #ccc;
     padding: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .projeto img {
-    width: 100%; /* Garante que a imagem ocupe toda a largura */
+    width: 100%; 
 }
 
 form {
     display: flex;
-    flex-direction: column; /* Organiza os campos em coluna */
+    flex-direction: column; /
     align-items: center;
     gap: 10px;
     margin-top: 20px;
@@ -61,7 +61,7 @@ button:hover {
 table {
     margin-top: 20px;
     border-collapse: collapse;
-    width: 50%; /* Centraliza e limita a largura */
+    width: 50%; 
     margin: 20px auto;
 }
 
@@ -75,9 +75,9 @@ th {
     background-color: #f4f4f4;
 }
 
-/* Estilos específicos para os cabeçalhos de Habilidade e Nível */
+
 table th {
-    color: #3498db; /* Cor azul para os cabeçalhos */
+    color: #3498db; 
 }
 
 header {
